[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
spotcheck_core={path="../core/"}
tokio = { version = "1.0", features = ["full","macros"] }
ureq = { version = "2.6", features = ["json"] }
serde_json = "1.0"
